--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bulma": "^0.8.0",
+    "cirrus-ui": "^0.5.5",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.1.4",
     "tslib": "^1.10.0",
