--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "^8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bulma": "^0.8.0",
     "cirrus-ui": "^0.5.5",
+    "hammerjs": "^2.0.8",
+    "ngx-material-timepicker": "^5.4.0",
+    "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.1.4",
+    "toastr": "^2.1.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
